Add CV download entry to config.json
Added a new entry for CV download in the configuration.

--- a/config.json
+++ b/config.json
@@ -11,6 +11,13 @@
       "important": true
     },
     {
+      "title": "الCV",
+      "url": "https://shawady6.github.io/contacts-/Ibrahim%20Elsaid-help%20desk.pdf",
+      "icon": "fas fa-file-arrow-down",
+      "important": true,
+      "download": true
+    },
+    {
       "title": "واتساب",
       "url": "https://wa.me/201044120523?text=مرحبا%20إبراهيم",
       "icon": "fab fa-whatsapp",
@@ -31,13 +38,6 @@
       "title": "إيميل",
       "url": "mailto:shawady6@gmail.com?subject=مرحبا",
       "icon": "fas fa-envelope"
-    },
-    {
-      "title": "تحميل السيرة الذاتية",
-      "url": "https://shawady6.github.io/contacts-/Ibrahim%20Elsaid-help%20desk.pdf",
-      "icon": "fas fa-file-arrow-down",
-      "important": true,
-      "download": true
     }
   ]
 }
