Update name and bio fields in config.json

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-  "name": "إبراهيم الشوادي",
+  "name": "إبراهيم السعيد \nالشوادي",
   "username": "@shawady6",
-  "bio": "IT help engineer 💻🌐\nتواصل معايا من هنا 👇",
+  "bio": "IT helpdesk engineer 💻🌐\nتواصل معايا من هنا 👇",
   "avatar": "./avatar.jpg",
   "links": [
     {
